feat(accounts): TICKET-571 prettier
prettierrc
config file

BREAKING CHANGE:
prettier@2.6.2

ISSUES CLOSED: 3134

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -18,6 +18,10 @@
         "options": {
           "printWidth": 200
         }
+      },
+      {
+        "files": "*.wxml",
+        "options": { "parser": "html" }
       }
     ]
   }
